--- a/submissions/Insidiae/style.css
+++ b/submissions/Insidiae/style.css
@@ -7,7 +7,6 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding: 2em 2em;
   font-family: "Inter var", sans-serif;
   font-size: 16px;
@@ -15,7 +14,29 @@ body {
   background: hsl(210deg 17% 98%);
 }
 
+h1 {
+  text-align: center;
+}
+
 .top-count {
   background-color: cornflowerblue;
   color: white;
+}
+
+#challenge-3-result {
+  border-collapse: collapse;
+}
+
+#challenge-3-result th,
+#challenge-3-result td {
+  border: 1px solid hsl(210deg 29% 29%);
+  padding: 8px;
+}
+
+#challenge-3-result th {
+  padding-block: 12px;
+  font-weight: bold;
+  background-color: hsl(210deg 29% 29%);
+  color: hsl(210deg 17% 98%);
+  text-align: left;
 }
